# Cheers-Health

./: .gitignore  Data Sent Cheers Wisdom (Hindi).xlsx  Data Sent Cheers Wisdom.xlsx  chatgpt-bot.py  dataset.xlsx  journal_entry.csv  pyproject.toml  recorded_journal_Q_and_A_dataset.sql  recorded_question_answer_dataset.sql  requirements.txt  test.ipynb
Demo/: chatgpt-bot.py  dataset.xlsx  demo.py  test.ipynb
alembic/: env.py
app/: config.py  database.py  main.py  main2.py  models.py  schemas.py  utils.py
app/routers/: flow.py  gpt.py  journal.py  primary.py  translate.py
